@@ -135,7 +135,7 @@ participating-org a:active			{color:#000;}
 span.span_participating-org narrative:nth-of-type(n+2)	{display:block; padding:0 0 0 24px; font-style:italic; font-size:16px; line-height:inherit;}
 span.span_participating-org narrative:nth-of-type(n+2):last-of-type		{padding-bottom:10px;}
 
-span-narrative.org-role, span-narrative.org-type		{display:inline; font-size:13px; line-height:24px; color:#000; margin-left:10px; border:1px solid #000; border-radius:4px; padding:2px 4px;}
+span-narrative.org-role, span-narrative.org-type		{display:inline; font-size:13px; line-height:24px; color:#000; margin-left:10px; border:1px solid #000; border-radius:4px; padding:4px 4px 2px 4px;}
 
 
 /*	Location (version 2.02++)
@@ -462,8 +462,10 @@ document-link span-title:nth-of-type(n+1)		{font-size:16px;}
 document-link span-title narrative				{display:inline;}
 document-link span-title narrative:nth-of-type(2){padding-left:5px; font-style:italic;}
 
-a.a_document-link span-title:after				{content:"LINK"; margin-left:10px; color:#000; font-size:12px; vertical-align:top; border:1px solid #000; border-radius:4px; padding:1px 4px;}
-span-narrative.doc-cat							{display:inline-block; margin-top:5px; margin-right:5px;  color:#000; font-size:13px; vertical-align:top; border:1px solid #000; border-radius:4px; padding:1px 4px; line-height:1.5em;}
+a.a_document-link span-title:after				{content:"LINK"; margin-left:10px; color:#000; font-size:12px; vertical-align:top; border:1px solid #000; border-radius:4px; padding:4px 4px 1px 4px;}
+span-narrative.doc-cat,
+span-doc_date									{display:inline-block; margin-top:5px; margin-right:5px;  color:#000; font-size:13px; vertical-align:top; border:1px solid #000; border-radius:4px; padding:1px 4px 0px 4px; line-height:1.5em;}
+
 
 /*	Add i to be case-insensitive */
 
@@ -514,7 +516,7 @@ policy-marker narrative:nth-of-type(n+2) {display:inline-block; font-style:itali
 policy-marker narrative:last-of-type:after	{display:block;}
 span-narrative.policy_vocab,
 span-narrative.policy_code,
-span-narrative.policy_sig		{display:inline-block; margin-left:5px; color:#000; font-size:13px; border:1px solid #000; border-radius:4px; padding:1px 4px; line-height:1.5em;}
+span-narrative.policy_sig		{display:inline-block; margin-left:5px; color:#000; font-size:13px; border:1px solid #000; border-radius:4px; padding:1px 4px 0px 4px; line-height:1.5em;}
 span-narrative.policies			{display:inline-block; font-size:initial; line-height:initial;}
 policy-marker:last-of-type		{padding-bottom:40px;}
 
