@@ -292,7 +292,7 @@ a.csv_download:hover		{background-color:#000; color:#FFF;}
 .donors_peak				{width:0; height:0; border-top:20px solid transparent; border-left:20px solid transparent; border-right:30px solid #000; border-bottom:20px solid transparent;}	/* Triangles */
 .donors_head_title			{width:100%; color:#000; font-size:58px; line-height:64px; text-align:center; padding:0 0 30px 0;}
 .donors_head_title.view		{text-align:center; margin:0;}
-.donors_head_title span		{display:block; font-size:0.7em; line-height:1.3em; padding-top:10px;}	/* Donor subtitle */
+.donors_head_title span		{display:block; font-size:0.7em; line-height:1em; padding-top:10px;}	/* Donor subtitle */
 
 
 /*	For url #view=*_activities
