@@ -157,7 +157,7 @@
 	</select>
 </div>
 
-<!-- TESTING POLICY MARKER-->
+<!-- POLICY MARKER-->
 <div class="search_wrap maxi">
 	<div class="search_label">
 		<img src="{flava}search_policy.png" alt="Policy Marker and Significance icon" width="13" height="13"/>{search_policy_txt}
