@@ -1,3 +1,9 @@
+Development Portal (2018-08-16 shi)
+==============================
+Dsiplay document-date for document-link in SAVi
+Updated print-friendly css
+
+
 Development Portal (2018-07-03 shi)
 ==============================
 Fix activity list header in Generator
